--- a/scss/foundation/_base.scss
+++ b/scss/foundation/_base.scss
@@ -4,7 +4,7 @@
 html {
   font-size: $font-size-base;
   scroll-behavior: smooth;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 body {
@@ -12,7 +12,7 @@ body {
   color: $color-black;
   line-height: $line-height-base;
   background: $color-white;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 h1,
